[package]
name = "sane_floats"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Sane implementation of floats methods"
repository = "https://github.com/tdelmas/sane_floats"
keywords = ["floats"]
categories = ["mathematics"]

[dependencies]

[lints.clippy]
cargo        = { priority = -1, level = "deny" }
complexity   = { priority = -1, level = "deny" }
correctness  = { priority = -1, level = "deny" }
suspicious   = { priority = -1, level = "deny" }
style        = { priority = -1, level = "deny" }
perf         = { priority = -1, level = "deny" }
pedantic     = { priority = -1, level = "deny" }
nursery      = { priority = -1, level = "deny" }
